Fix overflow

--- a/style.css
+++ b/style.css
@@ -366,6 +366,11 @@ section {
   }
 }
 
+#footer {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
 @media only screen and (max-width: 767px) {
   #footer {
     text-align: center;
